ren install.properties.example -> install.properties + commenting the whole content.
Without `install.properties`, not even `mvn compile` works.

--- a/install.properties
+++ b/install.properties
@@ -7,5 +7,5 @@
 # install.dir = ${env.HOME}/lib/release
 
 # PerebOS
-install.dir = C:\\Program Files\\release
+# install.dir = C:\\Program Files\\release
 
