`appassembler-maven-plugin` doesn't `chmod +x` the invocation script.
So I'm doing it myself in `install` now.

--- a/install.properties
+++ b/install.properties
@@ -4,8 +4,9 @@
 # 
 
 # Unix-like
-# install.dir = ${env.HOME}/lib/release
+# Edite ./install
+# 
+# TODO Fazer funcionar do mesmo jeito pros 2 OSs.
 
 # PerebOS
 # install.dir = C:\\Program Files\\release
-
