* Removing occurences of "mpdft" in pom.xml.   (groupId and mainClass)
* This also unbreaks the invocation script (which had been broken by the change in package names).

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <modelVersion>4.0.0</modelVersion>
   
-  <groupId>br.gov.mpdft.tools</groupId>
+  <groupId>com.github.tfga</groupId>
   <artifactId>release</artifactId>
   <version>1.0-SNAPSHOT</version>
   
@@ -115,7 +115,7 @@
                     
                     <programs>
                         <program>
-                            <mainClass>br.gov.mpdft.tools.release.Main</mainClass>
+                            <mainClass>com.github.tfga.release.Main</mainClass>
                             <name>release</name>
                         </program>
                     </programs>
